@@ -537,45 +537,53 @@ def calcu_refund_info_by_pro(pro_queryset=None):
     for i in pro_queryset:
         # # 退款数量 return_num
         #  实时过滤退款单中的状态 2015-09-30
-        sale_refunds = SaleRefund.objects.filter(item_id=i.id)
+        skus = i.prod_skus.all()
+        for sku in skus:
+            sale_refunds = SaleRefund.objects.filter(item_id=i.id, sku_id=sku.id)
 
-        # 申请退货数量（已经发货生成的退货申请）
-        sended_refunds = sale_refunds.filter(good_status=SaleRefund.BUYER_RECEIVED)
+            # 申请退货数量（已经发货生成的退货申请）
+            sended_refunds = sale_refunds.filter(good_status=SaleRefund.BUYER_RECEIVED)
 
-        # 退货途中数量(已经到货，填写了退货物流信息的退货申请) 排除　退款关闭，退款成功，等待返款的状态
-        backing_refunds = sale_refunds.filter(good_status=SaleRefund.BUYER_RETURNED_GOODS).exclude\
-            (status__in=(SaleRefund.REFUND_CLOSED, SaleRefund.REFUND_SUCCESS, SaleRefund.REFUND_APPROVE))
+            # 退货途中数量(已经到货，填写了退货物流信息的退货申请) 排除　退款关闭，退款成功，等待返款的状态
+            backing_refunds = sale_refunds.filter(good_status=SaleRefund.BUYER_RETURNED_GOODS).exclude\
+                (status__in=(SaleRefund.REFUND_CLOSED, SaleRefund.REFUND_SUCCESS, SaleRefund.REFUND_APPROVE))
 
-        # 退货到仓库的数量
-        backed_refunds = RefundProduct.objects.filter(outer_id=i.outer_id)
+            # 退货到仓库的数量
+            backed_refunds = RefundProduct.objects.filter(outer_id=i.outer_id, outer_sku_id=sku.outer_id)
 
-        # 已经退货数量
-        already_return_goods = ReturnGoods.objects.filter(product_id=i.id)
-        already_return_goods_num = already_return_goods.aggregate(total_al=Sum("return_num")).get("total_al") or 0
+            # 已经退货数量
+            already_return_goods = ReturnGoods.objects.filter(product_id=i.id)  # 过滤出审核通过的退货单
 
-        return_num = sale_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 退款数量
+            already_return_goods_num = already_return_goods.aggregate(total_al=Sum("return_num")).get("total_al") or 0
 
-        sended_refund_num = sended_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 申请退货数量
-        backing_refund_num = backing_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 退货途中数量
-        backed_refund = backed_refunds.aggregate(total_num=Sum("num")).get("total_num") or 0  # 退货到仓库数量
+            return_num = sale_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 退款数量
 
-        if return_num == 0 and sended_refund_num == 0 and backed_refund == 0:
-            continue
-        # 找出供应商和买手
-        sale_supplier_name, sale_supplier_pk, \
-        sale_supplier_contact, sale_supplier_mobile = get_sale_product(i.sale_product)
+            sended_refund_num = sended_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 申请退货数量
+            backing_refund_num = backing_refunds.aggregate(total_num=Sum("refund_num")).get("total_num") or 0  # 退货途中数量
+            backed_refund = backed_refunds.aggregate(total_num=Sum("num")).get("total_num") or 0  # 退货到仓库数量
 
-        prod = model_to_dict(i, exclude=("created", "modified", "sale_time"))
-        prod['return_num'] = return_num  # 退款数量
-        prod['sended_refund_num'] = sended_refund_num  # 申请退货数量
-        prod['backing_refund_num'] = backing_refund_num  # 退货途中数量
-        prod['backed_refund'] = backed_refund  # 退货到仓库数量
+            if return_num == 0 and sended_refund_num == 0 and backed_refund == 0:
+                continue
+            # 找出供应商和买手
+            sale_supplier_name, sale_supplier_pk, \
+            sale_supplier_contact, sale_supplier_mobile = get_sale_product(i.sale_product)
 
-        prod['sale_supplier_name'] = sale_supplier_name  # 供应商名称
-        prod['sale_supplier_pk'] = sale_supplier_pk
-        prod['sale_supplier_contact'] = sale_supplier_contact  # 联系人
-        prod['sale_supplier_mobile'] = sale_supplier_mobile  # 手机
-        prod['already_num'] = already_return_goods_num  # 已退数量
+            prod = model_to_dict(i, exclude=("created", "modified", "sale_time"))
+            prod['s_id'] = sku.id
+            prod['s_cost'] = sku.cost
+            prod["sku_quantity"] = sku.quantity  # 库存数
+            prod['sku_inferior_num'] = sku.sku_inferior_num  # sku的次品数量
+            prod['sku_wait_post_num'] = sku.wait_post_num  # 待发数
+            prod['return_num'] = return_num  # 退款数量
+            prod['sended_refund_num'] = sended_refund_num  # 申请退货数量
+            prod['backing_refund_num'] = backing_refund_num  # 退货途中数量
+            prod['backed_refund'] = backed_refund  # 退货到仓库数量
 
-        data.append(prod)
+            prod['sale_supplier_name'] = sale_supplier_name  # 供应商名称
+            prod['sale_supplier_pk'] = sale_supplier_pk
+            prod['sale_supplier_contact'] = sale_supplier_contact  # 联系人
+            prod['sale_supplier_mobile'] = sale_supplier_mobile  # 手机
+            prod['already_num'] = already_return_goods_num  # 已退数量
+
+            data.append(prod)
     return data
